# multitul

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: all_nouns_ru.txt  words_5_ru.txt
scripts/: word_gen.py
scripts/server/: .dockerignore  Dockerfile  dashboard.html  docker-compose.yaml  server.py
scripts/server/__pycache__/: server.cpython-314.pyc.2452689499312
scripts/server/tests/: test.py
src/: main.rs  main_test.rs
src/core/: git_graph_view.rs  mod.rs  sign.rs
src/core/git/: consts.rs  dag.rs  mod.rs  widget.rs
src/core/network/: mod.rs  network.rs  state.rs
src/games/: mod.rs  wordly.rs
src/games/minesweeper/: menu.rs  mod.rs  model.rs  styles.rs
src/games/one_brain/: menu.rs  mod.rs  protocol.rs  styles.rs  ws.rs
src/games/wordly/: attempt.rs  consts.rs  mark.rs  menu.rs  mod.rs  styles.rs  word_provider.rs
src/macros/: mod.rs  string_newtype_macro.rs
src/utils/: mod.rs  style.rs
src/utils/git/: commit.rs  consts.rs  git_error.rs  git_ref.rs  graph.rs  graph_layout.rs  hash.rs  mod.rs  provider.rs  ref_name.rs  ref_target.rs  repository.rs  state.rs  storage.rs
src/utils/git/store/: consts.rs  mod.rs  pack.rs  storage.rs
